--- a/dotnet-core-popgmail.csproj
+++ b/dotnet-core-popgmail.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="MailKit" Version="2.1.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.4.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.2.0" />
+    <PackageReference Include="System.ServiceProcess.ServiceController" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
