--- a/dotnet-core-popgmail.csproj
+++ b/dotnet-core-popgmail.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <!-- <RuntimeIdentifier>win7-x64</RuntimeIdentifier>
-    <LangVersion>7.1</LangVersion> -->
+    <RuntimeIdentifier>win7-x64</RuntimeIdentifier>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.94.2" />
